--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.5.0",
+    "@types/react-lottie": "^1.2.6",
     "bootstrap": "^5.2.2",
     "country-code-lookup": "^0.0.20",
     "date-fns": "^2.29.3",
@@ -18,8 +20,10 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.55.0",
-    "scrollmagic": "^2.0.8"
+    "scrollmagic": "^2.0.8",
+    "world-map-country-shapes": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
