--- a/package.json
+++ b/package.json
@@ -14,23 +14,19 @@
     "bootstrap": "^5.2.2",
     "country-code-lookup": "^0.0.20",
     "date-fns": "^2.29.3",
-    "debounce": "^1.2.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
-    "react-scroll": "^1.8.8",
     "sass": "^1.55.0",
-    "scrollmagic": "^2.0.8",
-    "world-map-country-shapes": "^1.0.0"
+    "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@types/react-scroll": "^1.8.4",
     "@types/scrollmagic": "^2.0.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
