--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-lottie": "^1.2.6",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.2",
     "country-code-lookup": "^0.0.20",
     "date-fns": "^2.29.3",
@@ -27,6 +31,7 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-lottie": "^1.2.6",
     "@types/scrollmagic": "^2.0.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
