--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-lottie": "^1.2.3",
     "sass": "^1.55.0",
     "scrollmagic": "^2.0.8"
@@ -31,11 +33,13 @@
     "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
     "@types/scrollmagic": "^2.0.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "^4.5.0",
     "typescript": "4.8.4"
   }
 }
