--- a/package.json
+++ b/package.json
@@ -9,25 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.9",
+    "@prisma/client": "^4.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
+    "bottleneck": "^2.19.5",
     "country-code-lookup": "^0.0.20",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-lottie": "^1.2.3",
     "sass": "^1.55.0",
-    "scrollmagic": "^2.0.8"
+    "scrollmagic": "^2.0.8",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.0",
