--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
-    "@mui/material": "^5.10.12",
     "@mui/x-data-grid": "^5.17.9",
-    "@prisma/client": "^4.5.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.6.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
@@ -30,21 +30,29 @@
     "date-fns": "^2.29.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
+    "nodemailer": "^6.8.0",
+    "otp-generator": "^4.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-cookie": "^4.1.1",
+    "react-countdown": "^2.3.3",
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-lottie": "^1.2.3",
+    "react-otp-input": "^2.4.0",
     "sass": "^1.55.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.6",
+    "twilio": "^3.83.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.23",
+    "@types/otp-generator": "^4.0.0",
     "@types/react": "18.0.21",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
@@ -52,7 +60,7 @@
     "@types/scrollmagic": "^2.0.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.0",
     "typescript": "4.8.4"
   }
 }
