--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "simesim",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">= 16.3.0",
+    "npm": ">= 8.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
