--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.0",
