--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.5.3",
+    "fuse.js": "^6.6.2",
+    "js-search": "^2.0.0",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "nodemailer": "^6.8.0",
