--- a/package.json
+++ b/package.json
@@ -65,20 +65,11 @@
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
     "@types/scrollmagic": "^2.0.2",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-next": "^0.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.7.1",
+    "eslint-config-typescript-airbnb-prettier": "^1.1.5",
     "prisma": "^4.6.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "eslint": "^7.32.0",
+    "prettier": "~2.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0"
   }
 }
