--- a/package.json
+++ b/package.json
@@ -65,11 +65,12 @@
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
     "@types/scrollmagic": "^2.0.2",
-    "eslint-config-typescript-airbnb-prettier": "^1.1.5",
-    "prisma": "^4.6.0",
-    "typescript": "4.8.4",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
+    "eslint-config-typescript-airbnb-prettier": "^1.1.5",
     "prettier": "~2.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.30.0"
+    "prisma": "^4.6.0",
+    "typescript": "4.8.4"
   }
 }
