--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-hook-form": "^7.38.0",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
+    "react-svg-pan-zoom": "^3.11.0",
+    "react-svg-pan-zoom-loader": "^1.4.1",
     "sass": "^1.55.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.6",
@@ -65,6 +68,8 @@
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-svg-pan-zoom": "^3.3.5",
+    "@types/react-svg-pan-zoom-loader": "^1.4.1",
     "@types/scrollmagic": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
