--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-auth": "^4.16.4",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-cookie": "^4.1.1",
@@ -64,6 +65,7 @@
     "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.23",
     "@types/otp-generator": "^4.0.0",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.21",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
