--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
     "js-search": "^2.0.0",
+    "mailersend": "^1.4.5",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "nodemailer": "^6.8.0",
