--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.0",
+    "@sentry/nextjs": "^7.27.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
