--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@next/eslint-plugin-next": "^13.0.4",
     "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.23",
