--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,5 @@ next-env.d.ts
 /.idea/prettier.xml
 /.idea/codeStyles/Project.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/workspace.xml.xml
 /.sentryclirc
