added payment gate to choose payment type

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@prisma/client": "^4.6.0",
     "@sentry/nextjs": "^7.27.0",
     "babel-plugin-macros": "^3.1.0",
@@ -43,6 +44,7 @@
     "next-auth": "^4.16.4",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -71,6 +73,7 @@
     "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.23",
     "@types/otp-generator": "^4.0.0",
+    "@types/paypal-rest-sdk": "^1.7.6",
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.21",
     "@types/react-datepicker": "^4.4.2",
