--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
+    "@lexical/react": "^0.7.6",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -38,10 +39,12 @@
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
     "js-search": "^2.0.0",
+    "lexical": "^0.7.6",
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
+    "next-transpile-modules": "^10.0.0",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
@@ -65,6 +68,7 @@
     "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.6",
     "twilio": "^3.83.1",
+    "verbum": "^0.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
