--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.245.0",
     "@ebay/nice-modal-react": "^1.2.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -22,7 +23,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
-    "@lexical/react": "^0.7.6",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -36,15 +36,13 @@
     "country-code-lookup": "^0.0.20",
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
+    "formidable-serverless": "^1.1.1",
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
-    "js-search": "^2.0.0",
-    "lexical": "^0.7.6",
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
-    "next-transpile-modules": "^10.0.0",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
@@ -63,13 +61,9 @@
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.0",
-    "react-svg-pan-zoom": "^3.11.0",
-    "react-svg-pan-zoom-loader": "^1.4.1",
     "sass": "^1.55.0",
-    "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.6",
     "twilio": "^3.83.1",
-    "verbum": "^0.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -84,9 +78,6 @@
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
-    "@types/react-svg-pan-zoom": "^3.3.5",
-    "@types/react-svg-pan-zoom-loader": "^1.4.1",
-    "@types/scrollmagic": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
