--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.2",
     "bottleneck": "^2.19.5",
+    "buffer": "^6.0.3",
     "country-code-lookup": "^0.0.20",
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
@@ -61,6 +62,8 @@
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.0",
+    "react-share": "^4.4.1",
+    "sanitize-html": "^2.8.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "twilio": "^3.83.1",
@@ -78,6 +81,7 @@
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-lottie": "^1.2.6",
+    "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
