--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "country-code-lookup": "^0.0.20",
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
+    "dom-parser": "^0.1.6",
     "formidable-serverless": "^1.1.1",
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
@@ -73,6 +74,7 @@
     "@faker-js/faker": "^7.6.0",
     "@next/eslint-plugin-next": "^13.0.4",
     "@svgr/webpack": "^6.5.0",
+    "@types/dom-parser": "^0.1.1",
     "@types/node": "18.7.23",
     "@types/otp-generator": "^4.0.0",
     "@types/paypal-rest-sdk": "^1.7.6",
