--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "formidable-serverless": "^1.1.1",
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
+    "image-thumbnail": "^1.0.15",
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
     "next": "12.3.1",
@@ -58,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha-v3": "^1.10.0",
     "react-hook-form": "^7.38.0",
+    "react-infinite-scroll-hook": "^4.0.4",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
     "react-quill": "^2.0.0",
@@ -75,6 +77,7 @@
     "@next/eslint-plugin-next": "^13.0.4",
     "@svgr/webpack": "^6.5.0",
     "@types/dom-parser": "^0.1.1",
+    "@types/image-thumbnail": "^1.0.1",
     "@types/node": "18.7.23",
     "@types/otp-generator": "^4.0.0",
     "@types/paypal-rest-sdk": "^1.7.6",
