--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mailersend": "^1.4.5",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
+    "nodemailer": "^6.9.0",
     "otp-generator": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "qrcode": "^1.5.1",
