--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "framer-motion": "^7.5.3",
     "fuse.js": "^6.6.2",
     "image-thumbnail": "^1.0.15",
+    "inngest": "^1.3.5",
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
-    "next": "12.3.1",
+    "next": "^13.2.3",
     "next-auth": "^4.16.4",
     "nodemailer": "^6.9.0",
     "otp-generator": "^4.0.0",
