--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-countdown": "^2.3.3",
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-google-recaptcha-v3": "^1.10.0",
     "react-hook-form": "^7.38.0",
@@ -61,7 +62,6 @@
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
     "react-quill": "^2.0.0",
-    "react-responsive": "^9.0.2",
     "react-select": "^5.7.0",
     "react-share": "^4.4.1",
     "sanitize-html": "^2.8.1",
