--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
     "next": "^13.2.3",
-    "next-auth": "^4.16.4",
+    "next-auth": "^4.21.0",
     "nodemailer": "^6.9.0",
     "otp-generator": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
@@ -64,6 +64,7 @@
     "react-quill": "^2.0.0",
     "react-select": "^5.7.0",
     "react-share": "^4.4.1",
+    "react-toastify": "^9.1.2",
     "sanitize-html": "^2.8.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
