added notification send

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/dom-parser": "^0.1.1",
     "@types/image-thumbnail": "^1.0.1",
     "@types/node": "18.7.23",
+    "@types/nodemailer": "^6.4.7",
     "@types/otp-generator": "^4.0.0",
     "@types/paypal-rest-sdk": "^1.7.6",
     "@types/qrcode": "^1.5.0",
