--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "^13.0.4",
     "eslint-config-typescript-airbnb-prettier": "^1.1.5",
+    "html-loader": "^4.2.0",
     "prettier": "~2.2.1",
     "prisma": "^4.6.0",
     "typescript": "4.8.4"
