--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fuse.js": "^6.6.2",
     "image-thumbnail": "^1.0.15",
     "inngest": "^1.3.5",
+    "json-pretty-html": "^1.1.6",
     "lodash": "^4.17.21",
     "mailersend": "^1.4.5",
     "next": "^13.2.3",
