--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.245.0",
@@ -23,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.9",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -76,8 +78,11 @@
     "@faker-js/faker": "^7.6.0",
     "@next/eslint-plugin-next": "^13.0.4",
     "@svgr/webpack": "^6.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/dom-parser": "^0.1.1",
     "@types/image-thumbnail": "^1.0.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.7.23",
     "@types/nodemailer": "^6.4.7",
     "@types/otp-generator": "^4.0.0",
@@ -96,8 +101,13 @@
     "eslint-config-next": "^13.0.4",
     "eslint-config-typescript-airbnb-prettier": "^1.1.5",
     "html-loader": "^4.2.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-extended": "^3.2.4",
     "prettier": "~2.2.1",
     "prisma": "^4.6.0",
+    "react-select-event": "^5.5.1",
+    "ts-jest": "^29.1.0",
     "typescript": "4.8.4"
   }
 }
