--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@svgr/webpack": "^6.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/dom-parser": "^0.1.1",
     "@types/image-thumbnail": "^1.0.1",
     "@types/jest": "^29.5.0",
